# ResolucionDeProblemasPorComputadora

./: .gitignore
alumnos/: Makefile
alumnos/Include/: assingment.hpp  assingments_list.hpp  core_list.hpp  core_node.hpp  date.hpp  estudiante.hpp  mayors.hpp  mayors_list.hpp  student.hpp
alumnos/src/: assingment.cpp  assingments_list.cpp  core_list.cpp  core_node.cpp  date.cpp  mayors.cpp  mayors_list.cpp  student.cpp
operaciones_de_matrices/: -p  Makefile  Test  main  main.c  mat.txt  operaciones.c  operaciones.h
operaciones_de_matrices_dinamicas/: Makefile  main  main.c  matin2.txt  operaciones.c  operaciones.h
operaciones_de_matrices_dinamicas/Include/: operaciones.h
operaciones_de_matrices_dinamicas/src/: operaciones.c
operaciones_de_matrices_dinamicas_float_diagonalizable/: matindiag.txt
operaciones_de_matrices_dinamicas_float_diagonalizable/Include/: operaciones.h
operaciones_de_matrices_esparsas/: Makefile  matin1.txt  matinsparce.txt
operaciones_de_matrices_esparsas/Include/: operaciones.h  (+1 more)
operaciones_de_matrices_estaticas/: Makefile  main0  main0.c  matin.txt  operaciones.h
polinomios/: Makefile
polinomios_splines/: Makefile  compile_flags.txt
truco/: 3  Bench  Cargo.toml  minimax
truco/src/: carta.rs  commands.rs  decision_maker.rs  game_commands.rs  game_logic.rs  jugador.rs  main.rs  mazo.rs  mesa.rs  motor.rs  server.rs  streams.rs  tables.rs
truco/src/decision_maker/: dumb_decider.rs  human_decider.rs  minimax_decider.rs
truco/src/motor/: carta.rs  contador.rs  jugador.rs  mazo.rs  mesa.rs
truco_viejo/: Cargo.toml
(+44 files in other folders)
