[package]
name = "truco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "./src/server.rs"

[[bin]]
name = "h_client"
path = "./src/h_client.rs"

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
